--- a/views/single.handlebars
+++ b/views/single.handlebars
@@ -1,47 +1,36 @@
-<h2>Inventario Actual</h2> 
-<script>
-    let hi = "hello"
-    console.log(hi)
-
-</script>
+<h2>Single</h2> 
 <section>
     <div class="container">
-        {{#each vehicles}}
             <div class="card">
                 <div class="header">
-                    <span class="title">{{this.title}}</span>
-                    <span class="price">${{this.price}}</span>
+                    <span class="title">{{vehicles.title}}</span>
+                    <span class="price">${{vehicles.price}}</span>
                 </div>
-                <p class="desc">{{this.description}}</p>
+                <p class="desc">{{vehicles.description}}</p>
                 <ul class="lists">
                     <li class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
                         </svg>
-                        <span>Category: {{this.category}}</span>
+                        <span>Category: {{vehicles.category}}</span>
                     </li>
                     <li class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
                         </svg>
-                        <span>Code: {{this.code}}</span>
+                        <span>Code: {{vehicles.code}}</span>
                     </li>
                     <li class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
                         </svg>
-                        <span>Stock: {{this.stock}}</span>
+                        <span>Stock: {{vehicles.stock}}</span>
                     </li>
                 </ul>
                 <div class="flex-col-xs">
-                    <div class="test">{{this.title}}</div>
-
-                    <a class="action" href="http://localhost:8080/views/{{this._id}}">Learn More</a>
-                    <button type="button" onclick='addToCart(hi)' class="action">Add to cart</button>
+                    <button type="button" class="action">Add to cart</button>
                 </div>
                 
             </div>
-        {{/each}}
     </div>
 </section>
-<script src="/index.js"></script>
