proyecto actualizado. Error en vista de login/register. req.body vacio

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -36,7 +36,7 @@
                 <div class="flex-col-xs">
                     <div class="test">{{this._id}}</div>
 
-                    <a class="action" href="http://localhost:8080/views/{{this._id}}">Learn More</a>
+                    <a class="action" href="http://localhost:8080/views/vehicle/{{this._id}}">Learn More</a>
                     <button type="button" onclick='itemToCart("{{{this._id}}}")' class="action">Add to cart</button>
                 </div>
                 
