--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -7,6 +7,6 @@
     <p><b>Apellido:</b> {{user.last_name}}</p>
     <p><b>Email:</b> {{user.email}}</p>
     <p><b>Edad:</b> {{user.age}}</p>
-    <span><a href="/logout" target="_self">Register</a></span>
+    <span><a href="/api/sessions/logout" target="_self">logout</a></span>
 </div>
 
