--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -5,19 +5,19 @@
 <form id="register-form" method="post" action="/api/sessions/register">
     <h3>Register Here</h3>
     <label for="first_name">First Name</label>
-    <input type="text" placeholder="First Name" id="first_name">
+    <input type="text" name="first_name" placeholder="First Name" id="first_name">
 
     <label for="last_name">Last Name</label>
-    <input type="text" placeholder="Last Name" id="last_name">
+    <input type="text" name="last_name" placeholder="Last Name" id="last_name">
 
     <label for="age">Age</label>
-    <input type="number" placeholder="Age" id="age">
+    <input type="number" name="age" placeholder="Age" id="age">
 
     <label for="email">Email</label>
-    <input type="text" placeholder="Email" id="email">
+    <input type="text" name="email" placeholder="Email" id="email">
 
     <label for="password">Password</label>
-    <input type="password" placeholder="Password" id="password">
+    <input type="password" name="password" placeholder="Password" id="password">
     <div class="flex-col-xs login-box">
         <button onclick="">Register</button>
     </div>
